# fluidfoam

./: .gitattributes  .gitignore  .hgignore  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGES.rst  Dockerfile  Dockerfile-ci  Makefile  README.md  README.rst  appveyor.yml  bitbucket-pipelines.yml  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build_and_pypi.yml  build_and_test.yml
appveyor/: install.ps1
doc/: Makefile  conf.py  environment.yml  index.rst  requirements.txt
doc/auto_examples/: index.rst  plot_0_field.ipynb  plot_0_field.py  plot_0_field.py.md5  plot_0_field.rst  plot_0_field_codeobj.pickle  plot_1_timeseries.ipynb  plot_1_timeseries.py.md5  plot_1_timeseries.rst  plot_1_timeseries_codeobj.pickle  plot_2D_mesh.ipynb  plot_2D_mesh.py  plot_2D_mesh.py.md5  plot_2D_mesh.rst  plot_2D_mesh_codeobj.pickle  plot_2_postprocforce.ipynb  plot_2_postprocforce.py  (+14 more)
examples/: README.txt  calc_0_avgfield.py  plot_1_timeseries.py  plot_2_postprocforce.py  plot_3_postprocprobe.py  plot_4_sampledfield.py  plot_5_postprocforcefft.py  plot_5_postprocprobefft.py  plot_averaged_field.py  plot_boundary.py  plot_contour.py  plot_contour_unstructured.py  plot_field.py  plot_postproc_probe.py  plot_time_series.py
fluidfoam/: OpenFoamSimu.py  __init__.py  _version.py  create1dprofile.py  meshdesign.py  meshvisu.py  openfoamsimu.py  processing1d.py  readof.py  readpostpro.py  test_create1dprofil.py  test_create1dprofilDFSEM.py  test_meshdesign.py  test_meshvisu.py  test_openfoamsimu.py  test_read.py  test_readpostpro.py
(+249 files in other folders)
